--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ junit = "4.14-SNAPSHOT"
 material = "1.12.0"
 hilt = "2.48.1"
 hilt-navigation-compose = "1.1.0"
+constraintlayout-compose = "1.0.1"
 
 activity-compose = "1.9.0"
 compose-bom = "2024.04.01"
@@ -26,6 +27,7 @@ material = { module = "com.google.android.material:material", version.ref = "mat
 hilt = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
 hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hilt-navigation-compose" }
+constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "constraintlayout-compose" }
 
 activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
 compose-bom = { module = "androidx.compose:compose-bom", version.ref = "compose-bom" }
